--- a/HW/HW1/graphicsCards.html
+++ b/HW/HW1/graphicsCards.html
@@ -27,7 +27,7 @@
             <img src="img/gtx1080Pic.jpg" alt="Niccolo Engbeck's picture" width=550, height=350/>
         </figure>
         
-         <div id="welcomeText">
+         <div>
             
             <p>With graphics cards, it comes down to your budget, and if you are going to be gaming/ editing video or 
             just watching netflix and browsing the web.</p>
