--- a/HW/HW1/processorFamily.html
+++ b/HW/HW1/processorFamily.html
@@ -27,7 +27,7 @@
             <img src="img/processorPic.jpg" alt="processor picture" width=550, height=350/>
         </figure>
         
-        <div id="welcomeText">
+        <div>
             
             <p>The center of your pc is the CPU. It's the brain of your computer can has a big affect on how fast or
             how budget friendly your pc will be.</p>
