--- a/labs/lab8/index.html
+++ b/labs/lab8/index.html
@@ -12,10 +12,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     
-    <body>
+    <body id="body">
 
         <div class='container text-center'>
-            <header>
+            <header id = header>
                <h1>Hangman</h1>
                <h4> Javascript Edition </h4>
             </header>
