--- a/labs/lab9/signup.html
+++ b/labs/lab9/signup.html
@@ -271,7 +271,11 @@ if(!isset($_SESSION['username'])){
             }
             
         </script>
-    
+    <style>
+        footer{
+        text-align: center;
+        }
+    </style>
     </body>
     	<footer id="footer">
 		<br><br>
